Fix issues after testing latest changes